# Calculator_qml_cpp

./: CMakeLists.txt  README.md  backend.cpp  backend.h  calculator.cpp  calculator.h  main.cpp  main.qml
Components/: CustomButton_01.qml  qmldir
Fonts/: BaseFont.qml  OpenSans_01.qml  qmldir
